--- a/index.html
+++ b/index.html
@@ -11,162 +11,173 @@
 
 <body>
     <header class="main_page_header">
-        <div class="main_page_header__menu_container">
-            <a class="main_page_header__logo" href="/"></a>
-            <a class="main_page_header__main_menu_button" href="#"></a>
-            <a class="main_page_header__main_menu_button--close main_page_header__main_menu_button--hidden" href="#"></a>
+        <div class="layout_center_wrapper">
+            <div class="main_page_header__menu_container">
+                <a class="main_page_header__logo" href="/"></a>
+                <a class="main_page_header__main_menu_button" href="#"></a>
+                <a class="main_page_header__main_menu_button--close main_page_header__main_menu_button--hidden" href="#"></a>
+            </div>
+            <nav class="main_menu main_menu--hidden">
+                <li class="main_menu__item">
+                    <a class="main_menu__link" href="#">Информация</a>
+                </li>
+                <li class="main_menu__item">
+                    <a class="main_menu__link" href="#">Возможности</a>
+                </li>
+                <li class="main_menu__item">
+                    <a class="main_menu__link" href="#">Отзывы</a>
+                </li>
+                <li class="main_menu__item">
+                    <a class="main_menu__link" href="#">Стоимость</a>
+                </li>
+            </nav>
         </div>
-        <nav class="main_menu main_menu--hidden">
-            <li class="main_menu__item">
-                <a class="main_menu__link" href="#">Информация</a>
-            </li>
-            <li class="main_menu__item">
-                <a class="main_menu__link" href="#">Возможности</a>
-            </li>
-            <li class="main_menu__item">
-                <a class="main_menu__link" href="#">Отзывы</a>
-            </li>
-            <li class="main_menu__item">
-                <a class="main_menu__link" href="#">Стоимость</a>
-            </li>
-        </nav>
-
     </header>
 
     <main>
         <section class="application">
-            <div class="application__slogan">Взгляните на жизнь иначе!</div>
-            <div class="application__download_block">
-                <a class="application__button" href="#">Скачать приложение</a>
-                <div class="application__platform_selector">
-                    <a class="application__link application__link--apple" href="#" title="apple">Apple</a>
-                    <a class="application__link application__link--android" href="#" title="android">Android</a>
-                    <a class="application__link application__link--win" href="#" title="windows phone">WP</a>
+            <div class="layout_center_wrapper">
+                <div class="application__slogan">Взгляните на жизнь иначе!</div>
+
+                <div class="application__download_block">
+                    <a class="application__button" href="#">Скачать приложение</a>
+                    <div class="application__platform_selector">
+                        <a class="application__link application__link--apple" href="#" title="apple">Apple</a>
+                        <a class="application__link application__link--android" href="#" title="android">Android</a>
+                        <a class="application__link application__link--win" href="#" title="windows phone">WP</a>
+                    </div>
+                    <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
                 </div>
-                <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
             </div>
         </section>
 
 
         <section class="features">
-            <div class="features__slogan">
-                Устали от серости мегаполиса?
-            </div>
-            <div class="features__slogan gradient features__slogan--short">Нам есть, что вам<br> предложить!</div>
-            <div class="features__block">
-                <div class="feature">
-                    <p class="feature__title">Поднимает настроение</p>
-                    <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</div>
+                <div class="features__slogan">
+                    Устали от серости мегаполиса?
                 </div>
-                <div class="feature">
-                    <p class="feature__title">Меняет мир вокруг</p>
-                    <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
-                </div>
-                <div class="feature">
-                    <p class="feature__title">Заводит новых друзей</p>
-                    <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
-                </div>
-            </div>
-                <picture>
-                    <source media="(min-width: 700px)" 
-                    srcset="/img/iphone-screen-2-3@1x.png 1x,
-                /img/iphone-screen-2-3@2x.png 2x">
-                        <img class="features__promo_img" src="/img/iphone-screen-3-3@1x.png" alt="Приложение" srcset="/img/iphone-screen-3-3@2x.png 2x">
-                </picture>
-        </section>
-        
-        <section class="ads clearfix">
-            <img src="/img/timer.svg" alt="" class="ads__time_img">
-            <div class="ads__article">
-                <div class="ads__title">Эффект на 24 часа!</div>
-                <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!
-                
-                </div>
-                <a href="#" class="ads__link">Узнать больше об исследовании</a>
-            </div>
-        </section>
-
-        <section class="slider_frame">
-            <div class="slider_frame__body">
-                <article class="review">
-                    <p class="review__name">Николай Петров</p>
-                    <p class="review__profession">25 лет, водитель трамвая</p>
-                    <div class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</div>
-                </article>
-            </div>
-            <ul class="slider_frame__switch">
-                <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
-                </li>
-                <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button" href=""></a>
-                </li>
-                <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button" href=""></a>
-                </li>
-            </ul>
-        </section>
-
-        <section class="slider_frame">
-            <div class="slider_frame__body">
-                <div class="price">
-                    <div class="price__header">
-                        <span class="price__name">Стандарт</span>
-                        <span class="price__cost">3,99 USD</span>
+                <div class="features__slogan gradient features__slogan--short">Нам есть, что вам
+                    <br>предложить!</div>
+                <div class="features__demo">
+                    <div class="layout_center_wrapper">
+                    <div class="features__block">
+                        <div class="feature">
+                            <p class="feature__title">Поднимает настроение</p>
+                            <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</div>
+                        </div>
+                        <div class="feature">
+                            <p class="feature__title">Меняет мир вокруг</p>
+                            <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
+                        </div>
+                        <div class="feature">
+                            <p class="feature__title">Заводит новых друзей</p>
+                            <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
+                        </div>
                     </div>
-                    <ul class="price__features">
-                        <li class="price__feature">Розовый фильтр</li>
-                        <li class="price__feature">Смайлики</li>
-                        <li class="price__feature--off">Комментарии</li>
-                    </ul>
+                    <picture>
+                        <source media="(min-width: 700px)" srcset="/img/iphone-screen-2-3@1x.png 1x,
+                /img/iphone-screen-2-3@2x.png 2x">
+                            <img class="features__promo_img" src="/img/iphone-screen-3-3@1x.png" alt="Приложение" srcset="/img/iphone-screen-3-3@2x.png 2x">
+                    </picture>
+                    </div>
                 </div>
-            </div>
-            <ul class="slider_frame__switch slider_frame__switch--price">
-                <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button" href=""></a>
-                </li>
-                <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
-                </li>
-                <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button" href=""></a>
-                </li>
-            </ul>
         </section>
+        <div class="layout_center_wrapper">
+            <section class="ads clearfix">
+                <img src="/img/timer.svg" alt="" class="ads__time_img">
+                <div class="ads__article">
+                    <div class="ads__title">Эффект на 24 часа!</div>
+                    <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!
 
-        <section class="contacts">
-            <div class="contacts__slogan">
-               Остались вопросы?
-                <br>Свяжитесь с нами!</div>
-            <div class="contact">
-                <p class="contact__title">Звоните:</p>
-                <div class="contact__addr">8 (800) 1000 900</div>
-            </div>
-            <div class="contact">
-                <p class="contact__title">Пишите:</p>
-                <div class="contact__addr">hello@pinkapp.ru</div>
-            </div>
-            <div class="contact">
-                <p class="contact__title">Приезжайте в гости:</p>
-                <div class="contact__addr">Санкт-Петербург, Невский проспект, д.20</div>
-            </div>
-            <img src="img/map.png" class="contacts__map">
-        </section>
+                    </div>
+                    <a href="#" class="ads__link">Узнать больше об исследовании</a>
+                </div>
+            </section>
+
+            <section class="slider_frame">
+                <div class="slider_frame__body">
+                    <article class="review">
+                        <p class="review__name">Николай Петров</p>
+                        <p class="review__profession">25 лет, водитель трамвая</p>
+                        <div class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</div>
+                    </article>
+                </div>
+                <ul class="slider_frame__switch">
+                    <li class="slider_frame__switch_item">
+                        <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
+                    </li>
+                    <li class="slider_frame__switch_item">
+                        <a class="slider_frame__switch_button" href=""></a>
+                    </li>
+                    <li class="slider_frame__switch_item">
+                        <a class="slider_frame__switch_button" href=""></a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="slider_frame">
+                <div class="slider_frame__body">
+                    <div class="price">
+                        <div class="price__header">
+                            <span class="price__name">Стандарт</span>
+                            <span class="price__cost">3,99 USD</span>
+                        </div>
+                        <ul class="price__features">
+                            <li class="price__feature">Розовый фильтр</li>
+                            <li class="price__feature">Смайлики</li>
+                            <li class="price__feature--off">Комментарии</li>
+                        </ul>
+                    </div>
+                </div>
+                <ul class="slider_frame__switch slider_frame__switch--price">
+                    <li class="slider_frame__switch_item">
+                        <a class="slider_frame__switch_button" href=""></a>
+                    </li>
+                    <li class="slider_frame__switch_item">
+                        <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
+                    </li>
+                    <li class="slider_frame__switch_item">
+                        <a class="slider_frame__switch_button" href=""></a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="contacts">
+                <div class="contacts__slogan">
+                    Остались вопросы?
+                    <br>Свяжитесь с нами!</div>
+                <div class="contact">
+                    <p class="contact__title">Звоните:</p>
+                    <div class="contact__addr">8 (800) 1000 900</div>
+                </div>
+                <div class="contact">
+                    <p class="contact__title">Пишите:</p>
+                    <div class="contact__addr">hello@pinkapp.ru</div>
+                </div>
+                <div class="contact">
+                    <p class="contact__title">Приезжайте в гости:</p>
+                    <div class="contact__addr">Санкт-Петербург, Невский проспект, д.20</div>
+                </div>
+                <img src="img/map.png" class="contacts__map">
+            </section>
+        </div>
     </main>
     <footer class="main_page_footer">
-        <a href="#" class="main_page_footer__logo">
-        <img src="/img/Pink-logo-footer-2@1x.png" alt="123">
-        </a>
-        <a href="" class="main_page_footer__twitter">
-        <img src="/img/twitter.svg" alt="123">
-        </a>
-        <a href="" class="main_page_footer__facebook">
-        <img src="/img/facebook.svg" alt="123">    
-        </a>
-        <a href="" class="main_page_footer__youtube">
-            <img src="/img/youtube.svg" alt="123">
-        </a>
-        <a href="" class="main_page_footer__123"></a>   
+        <div class="layout_center_wrapper">
+            <a href="#" class="main_page_footer__logo">
+                <img src="/img/Pink-logo-footer-2@1x.png" alt="123">
+            </a>
+            <a href="" class="main_page_footer__twitter">
+                <img src="/img/twitter.svg" alt="123">
+            </a>
+            <a href="" class="main_page_footer__facebook">
+                <img src="/img/facebook.svg" alt="123">
+            </a>
+            <a href="" class="main_page_footer__youtube">
+                <img src="/img/youtube.svg" alt="123">
+            </a>
+            <a href="" class="main_page_footer__123"></a>
+        </div>
     </footer>
 </body>
 
